--- a/KintelaApp/KintelaConsole/KintelaConsole.csproj
+++ b/KintelaApp/KintelaConsole/KintelaConsole.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KintelaData\KintelaData.csproj" />
+    <ProjectReference Include="..\KintelaDomain\KintelaDomain.csproj" />
+  </ItemGroup>
+
 </Project>
