--- a/KintelaApp/KintelaConsole/KintelaConsole.csproj
+++ b/KintelaApp/KintelaConsole/KintelaConsole.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KintelaData\KintelaData.csproj" />
     <ProjectReference Include="..\KintelaDomain\KintelaDomain.csproj" />
   </ItemGroup>
