--- a/KintelaApp/KintelaData/KintelaData.csproj
+++ b/KintelaApp/KintelaData/KintelaData.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\KintelaDomain\KintelaDomain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
