usar secreto para la cadena de conexión

--- a/KintelaApp/KintelaAPI/appsettings.json
+++ b/KintelaApp/KintelaAPI/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "KintelaDatabaseLocal": "Server=(localdb)\\MSSQLLocalDB; Initial Catalog=KintelaDatabase",
-    "KintelaDatabaseAzure": "Server=sqlkintela.database.windows.net; Database=kintela; User Id=putosheriff; Password=Windows2024!;"
-  }
+  },
+  "KEY_VAULT_NAME": "kvKintelaWeb",
+  "SECRET_NAME": "DataBaseConnectionString"
 }
