intento fallido de recibir la receta y la imagen a la vez

--- a/KintelaApp/KintelaAPI/appsettings.json
+++ b/KintelaApp/KintelaAPI/appsettings.json
@@ -8,8 +8,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "KintelaDatabaseLocal": "Server=(localdb)\\MSSQLLocalDB; Initial Catalog=KintelaDatabase",
+    "KintelaDatabaseLocal": "Server=(localdb)\\MSSQLLocalDB; Initial Catalog=KintelaDatabase"
   },
   "KEY_VAULT_NAME": "kvKintelaWeb",
-  "SECRET_NAME": "DataBaseConnectionString"
+  "SECRET_NAME": "DataBaseConnectionString",
+  "AzureBlobStorage": {
+    "ConnectionString": "https://safotoskintela.blob.core.windows.net/",
+    "ContainerName": "assets"
+  }
 }
